Added FirebaseController and QuizController
FirebaseController - Handles the initialization of firebase access
QuizController - Converts contents of firebase data into Question and Quiz custom objects.